<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="label_best_tracker">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="label_made_by">Созданный студентами</string>
    <string name="label_sign_up">Зарегистрироваться</string>
    <string name="label_sign_in">Уже есть аккаунт?</string>
    <string name="label_registration">Регистрация</string>
    <string name="label_login">Логин</string>
    <string name="label_password">Пароль</string>
    <string name="label_old_password">Старый пароль</string>
    <string name="label_new_password">Новый пароль</string>
    <string name="label_repeat_password">Повторите пароль</string>
    <string name="label_nickname">Имя или никнейм</string>
    <string name="label_gender">Пол</string>
    <string name="label_gender_male">Мужской</string>
    <string name="label_gender_female">Женский</string>
    <string name="label_gender_other">Другое</string>
    <string name="label_policy">Нажимая на кнопку, вы соглашаетесь
с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="label_back_sign_in">Вход</string>
    <string name="label_final_sign_in">Войти</string>
    <string name="label_activity">Активность</string>
    <string name="label_profile">Профиль</string>
    <string name="label_my_activity">Моя</string>
    <string name="label_users_activity">Пользователей</string>
    <string name="label_comment">Комментарий</string>
    <string name="label_log_out">Выйти</string>
    <string name="label_confirm">Принять</string>
    <string name="label_save">Сохранить</string>
    <string name="label_change_password">Изменить пароль</string>
    <string name="label_letsgo">Погнали? :)</string>
    <string name="label_start">Начать</string>
    <string name="label_time_to_train">Время потренить</string>
    <string name="label_choose_activity">Нажимай на кнопку ниже и начинаем трекать активность</string>
</resources>